<resources>
    <string name="app_name">Radar MVP</string>

    <string name="login_first_name">first name</string>
    <string name="login_last_name">last name</string>
    <string name="login_phone">phone number</string>
    <string name="login_password">password</string>
    <string name="login_password_duplicate">repeat password</string>
    <string name="signup_confirmation_password">confirm password</string>
    <string name="not_member">not a member yet?</string>
    <string name="member">are you a member?</string>
    <string name="login">login</string>
    <string name="signup">sign up</string>
    <string name="submit">submit</string>

    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="tap">Tap</string>
    <string name="dance">invite to dance</string>

    <!-- notifications -->
    <string name="interaction_wave_back">wave back!</string>

    <!-- defaults -->
    <string name="default_profile_name">José Luís Magalhães</string>
    <string name="default_wave">somebody waved you</string>
    <string name="default_blub_name">Urban Beach</string>
    <string name="default_number_people_inside">2126 people</string>

    <!-- acessibility -->
    <string name="accessibility_wave">someone waved you</string>
    <string name="accessibility_burn">burn image</string>
    <string name="accessibility_waving">person is waving @ you</string>

    <!-- validation -->
    <string name="validation_digits_name">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-</string>
    <string name="validation_digits_phone">0123456789</string>
</resources>