<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:animateLayoutChanges="true"
    android:background="@color/outspin_black">

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.activities.SignInActivity">

        <ImageView
            android:id="@+id/iv_edit_photo"
            android:src="@mipmap/profile_thumbnail_default_joidk_easter_egg_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_firstName"
            android:layout_width="@dimen/login_input_width"
            android:layout_height="@dimen/login_input_height"
            android:layout_margin="@dimen/login_input_margin"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:hint="@string/login_first_name"
            android:digits="@string/validation_digits_name"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@drawable/selector_hint" />

        <EditText
            android:id="@+id/et_lastName"
            android:layout_width="@dimen/login_input_width"
            android:layout_height="@dimen/login_input_height"
            android:layout_margin="@dimen/login_input_margin"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:hint="@string/login_first_name"
            android:digits="@string/validation_digits_name"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@drawable/selector_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_input_height"
            android:orientation="horizontal"
            android:background="@drawable/underline">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp_country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_contentColor="@color/white"
                app:ccp_defaultNameCode="PT"
                app:ccp_autoDetectCountry="true"
                app:ccpDialog_backgroundColor="@color/outspin_black"
                app:ccpDialog_textColor="@color/white"
                app:ccp_showFullName="false"
                app:ccp_showPhoneCode="true"
                app:ccp_showNameCode="false"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:counterOverflowTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"

                app:passwordToggleTint="@color/white"
                android:textColorHint="@color/white" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:digits="@string/validation_digits_phone"
                    android:maxLines="1"

                    android:textColor="@color/white"
                    android:textColorHighlight="@color/gray"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/gray"
                    android:maxLength="9"

                    android:background="@color/transparent"
                    android:gravity="center"
                    android:hint="@string/login_phone"
                    android:inputType="numberSigned" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_input_height"
            android:orientation="horizontal"
            android:background="@drawable/underline">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColor="@color/white"
                android:textColorHighlight="@color/gray"
                android:textColorLink="@color/gray"
                app:counterOverflowTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"

                app:passwordToggleTint="@color/white"
                android:textColorHint="@color/white"
                app:passwordToggleEnabled="true" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:textColorLink="@color/white"
                    android:hint="@string/login_password"
                    android:maxLength="15"
                    android:inputType="textPassword"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <Button
            android:id="@+id/bt_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/submit"
            android:textColor="@color/white"
            app:cornerRadius="20dp"
            app:strokeColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>