<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/outspin_black">

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.activities.LoginActivity">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="@dimen/login_input_width"
            android:layout_height="@dimen/login_input_height"
            android:layout_margin="@dimen/login_input_margin"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:hint="@string/login_name"
            android:textColor="@color/white"
            android:textColorHint="@drawable/selector_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_input_height"
            android:orientation="horizontal"
            android:background="@drawable/underline">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_contentColor="@color/white"
                app:ccp_defaultNameCode="PT"
                app:ccp_autoDetectCountry="true"
                app:ccpDialog_backgroundColor="@color/outspin_black"
                app:ccpDialog_textColor="@color/white"
                app:ccp_showFullName="false"
                app:ccp_showPhoneCode="true"
                app:ccp_showNameCode="false"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleTint="@color/white"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:textColorLink="@color/white"
                    android:hint="@string/login_phone"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/et_login_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_input_height"
                android:layout_margin="@dimen/login_input_margin"
                android:backgroundTint="@color/white"
                android:background="@color/transparent"
                android:gravity="start"
                android:hint="@string/login_phone"
                android:inputType="phone"
                android:textColor="@color/white"
                android:textColorHint="@drawable/selector_hint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_input_height"
            android:orientation="horizontal"
            android:background="@drawable/underline">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleTint="@color/white"
                android:textColorHint="@color/white"
                app:passwordToggleEnabled="true" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:textColorLink="@color/white"
                    android:hint="@string/login_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="0dp"
                android:layout_height="@dimen/login_input_height"
                android:layout_margin="@dimen/login_input_margin"
                android:layout_weight="2"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:hint="@string/login_password"
                android:background="@color/transparent"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@drawable/selector_hint" />

            <ImageButton
                android:src="@drawable/ic_show"
                android:background="@color/transparent"
                android:layout_width="50dp"
                android:layout_height="50dp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bt_submit"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        app:strokeColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_login"
        app:layout_constraintBottom_toBottomOf="@id/ll_signup"/>

    <LinearLayout
        android:id="@+id/ll_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/not_member"
            android:textColor="@color/light_gray" />

        <TextView
            android:id="@+id/tv_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/signup"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>